--- a/application/res/values/strings.xml
+++ b/application/res/values/strings.xml
@@ -21,7 +21,7 @@
 		<item>Activity</item>
 	</string-array>
 	<string-array name="start_tab_values">
-		<item>contacts</item>
+		<item>recent</item>
 		<item>activity</item>
 	</string-array>
 </resources>
